// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS BpkFlatListItem should render correctly 1`] = `
<View
  accessibilityLabel="List item"
  accessibilityRole="button"
  accessible={true}
  clickable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "minHeight": 44,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      null,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.12,
          },
          Object {},
          Array [
            Object {
              "flex": 1,
            },
          ],
        ]
      }
    >
      List item
    </Text>
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(68, 69, 96)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "rgb(0, 157, 189)",
            "opacity": 0,
          },
        ],
      ]
    }
  >
    
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(17, 18, 54)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkFlatListItem should support the "image" property 1`] = `
<View
  accessibilityLabel="List item"
  accessibilityRole="button"
  accessible={true}
  clickable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "minHeight": 44,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      null,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <Image
      style={
        Array [
          undefined,
          Object {
            "marginRight": 24,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.12,
          },
          Object {},
          Array [
            Object {
              "flex": 1,
            },
          ],
        ]
      }
    >
      List item
    </Text>
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(68, 69, 96)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "rgb(0, 157, 189)",
            "opacity": 0,
          },
        ],
      ]
    }
  >
    
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(17, 18, 54)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
</View>
`;

exports[`iOS BpkFlatListItem should support the "selected" property 1`] = `
<View
  accessibilityLabel="List item"
  accessibilityRole="button"
  accessible={true}
  clickable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "minHeight": 44,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      null,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.12,
          },
          Object {},
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "color": "rgb(0, 157, 189)",
            },
          ],
        ]
      }
    >
      List item
    </Text>
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(68, 69, 96)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "rgb(0, 157, 189)",
            "opacity": 0,
          },
          Object {
            "opacity": 1,
          },
        ],
      ]
    }
  >
    
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(17, 18, 54)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
</View>
`;

exports[`iOS should support theming when selected 1`] = `
<View
  accessibilityLabel="List item"
  accessibilityRole="button"
  accessible={true}
  clickable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "minHeight": 44,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      null,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "rgb(68, 69, 96)",
            "fontFamily": "System",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0.12,
          },
          Object {},
          Object {
            "fontFamily": "System",
          },
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "color": "rgb(0, 157, 189)",
            },
            Object {
              "color": "red",
            },
          ],
        ]
      }
    >
      List item
    </Text>
  </View>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(68, 69, 96)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "color": "rgb(68, 69, 96)",
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "rgb(0, 157, 189)",
            "opacity": 0,
          },
          Object {
            "opacity": 1,
          },
          Object {
            "color": "red",
          },
        ],
      ]
    }
  >
    
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(17, 18, 54)",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  />
</View>
`;
